# opengl-sandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
engine/: CMakeLists.txt
engine/include/: Camera.hpp  Debug.hpp  Engine.hpp  Entity.hpp  Material.hpp  Mesh.hpp  MeshRenderer.hpp  Texture.hpp  Transform.hpp
engine/include/glad/: glad.h
engine/shaders/: fragment.fs
engine/src/: Camera.cpp  Engine.cpp  Entity.cpp  Material.cpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  Shader.cpp  Shader.hpp  Texture.cpp  Transform.cpp  glad.c
engine/src/Camera/: Camera.hpp
engine/src/ecs/: Component.hpp  Entity.hpp
engine/src/ecs/components/: Light.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  ModelRenderer.cpp  ModelRenderer.hpp  Movement.hpp  Transform.cpp  Transform.hpp
engine/src/render/: RenderState.cpp  RenderState.hpp
engine/src/resources/: Geometry.cpp  Geometry.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp
playground/: CMakeLists.txt
playground/src/: main.cpp
shaders/: basic.fs  basic.vs
